--- a/.github/workflows/github-actions-ci.yml
+++ b/.github/workflows/github-actions-ci.yml
@@ -1,16 +1,64 @@
-name: Deploy to Amazon ECR
+# name: Deploy to Amazon ECR
+
+# on:
+#   push: # Run script whenever the code is commited to master branch
+#     branches:
+#       - master 
+#   pull_request: # Run script whenever the pull request is merged with master branch
+#     branches:
+#       - master
+
+# env:
+#   AWS_REGION: ap-south-1 # Your AWS region, e.g. us-west-1
+#   ECR_REPOSITORY: rahulecr95 # Your Amazon ECR repository name
+
+# jobs:
+#   deploy:
+#     name: Deploy
+#     runs-on: ubuntu-latest
+#     environment: FAST_API_DEPLOYMENT
+
+#     steps:
+#       - name: Checkout
+#         uses: actions/checkout@v4
+
+#       - name: Configure AWS credentials
+#         uses: aws-actions/configure-aws-credentials@0e613a0980cbf65ed5b322eb7a1e075d28913a83
+#         with:
+#           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+#           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+#           aws-region: ${{ env.AWS_REGION }}
+
+#       - name: Login to Amazon ECR
+#         id: login-ecr
+#         uses: aws-actions/amazon-ecr-login@62f4f872db3836360b72999f4b87f1ff13310f3a
+
+#       - name: Build, tag, and push image to Amazon ECR
+#         id: build-image
+#         env:
+#           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+#           IMAGE_TAG: ${{ github.sha }}
+#         run: |
+#           # Build a docker container
+#           docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG . 
+#           # Push docker container to ECR
+#           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+
+name: Deploy to Amazon EKS
 
 on:
-  push: # Run script whenever the code is commited to master branch
+  push: # Run script whenever the code is committed to the master branch
     branches:
       - master 
-  pull_request: # Run script whenever the pull request is merged with master branch
+  pull_request: # Run script whenever the pull request is merged with the master branch
     branches:
       - master
 
 env:
-  AWS_REGION: ap-south-1 # Your AWS region, e.g. us-west-1
+  AWS_REGION: ap-south-1 # Your AWS region, e.g., us-west-1
   ECR_REPOSITORY: rahulecr95 # Your Amazon ECR repository name
+  EKS_CLUSTER_NAME: himanshu # Your Amazon EKS cluster name
+  EKS_CLUSTER_REGION: ap-south-1 # Your Amazon EKS cluster region
 
 jobs:
   deploy:
@@ -43,3 +91,15 @@ jobs:
           docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG . 
           # Push docker container to ECR
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+
+      - name: Configure Kubernetes
+        uses: azure/aks-set-context@v1
+        with:
+          creds: ${{ secrets.KUBE_CONFIG }}
+          cluster-name: himanshu
+          resource-group: himanshu
+
+      - name: Deploy to Amazon EKS
+        run: |
+          kubectl apply -f path/to/your/kubernetes/manifests
+
