--- a/.github/workflows/github-actions-ci.yml
+++ b/.github/workflows/github-actions-ci.yml
@@ -43,11 +43,16 @@ jobs:
           docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG . 
           # Push docker container to ECR
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
-  deploy:
-    needs: build
+          
+  deploy-to-eks:
+    name: Deploy to EKS
+    needs: build-and-push
     runs-on: ubuntu-latest
 
     steps:
-    - name: Deploy to EKS
-        script: |
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - name: Deploy to EKS
+        run: |
           kubectl apply -f ./kube.yaml
