--- a/.github/workflows/github-actions-ci.yml
+++ b/.github/workflows/github-actions-ci.yml
@@ -22,6 +22,12 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
+      - name: Install kubectl
+      uses: azure/setup-kubectl@v2.0
+      with:
+        version: 'v1.24.0' 
+      id: install
+
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@0e613a0980cbf65ed5b322eb7a1e075d28913a83
         with:
@@ -44,16 +50,10 @@ jobs:
           # Push docker container to ECR
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
 
-       - name: Pull Docker image from ECR
+      - name: Update kube config
+        run: aws eks update-kubeconfig --name himanshu
+    
+      - name: Deploy to EKS
         run: |
-          docker pull ${{ steps.login-ecr.outputs.registry }}/rahulecr95:latest
-
-       - name: Deploy to EKS
-        uses:  actions/checkout@v2
-        with:
-           host: https://3921C0ED7B9F0E602D4D97C7BB570B15.gr7.ap-south-1.eks.amazonaws.com
-           username: himanshu
-           password: Rahul95@#
-
-        script: |
-          kubectl apply -f kube.yaml
+          kubectl apply -f deployment.yaml
+          kubectl apply -f service.yaml
